Transaction List: add feature to retrieve all transaction or only the selected ones
