# cmd/api/handlers/transactionHandler.go
@@ -5,6 +5,7 @@ import (
 	"bucketWise/pkg/dto"
 	"bucketWise/pkg/ports"
 	"net/http"
+	"strings"
 
 	"github.com/gin-gonic/gin"
 )
@@ -54,4 +55,37 @@ func (h TransactionHandler) CreateTransaction(c *gin.Context) {
 		Type:         string(insertedTx.Type),
 	}
 	c.JSON(http.StatusCreated, resp)
+}
+
+// ListTransactions godoc
+// @Summary Get transactions (optionally filtered by category)
+// @Description Retrieves all transactions, or those matching a category if provided
+// @Tags transactions
+// @Param category query string false "Category name (optional)"
+// @Produce json
+// @Success 200 {array} dto.TransactionResponse "List of transactions"
+// @Failure 500 {object} map[string]string "Internal server error"
+// @Router /transactions [get]
+func (h TransactionHandler) ListTransactions(c *gin.Context) {
+	cat := strings.TrimSpace(c.Query("category"))
+	transactionList, err := h.TransactionUC.ListTransactionsUseCase(cat)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	var response []dto.TransactionResponse
+	for _, tx := range transactionList {
+		response = append(response, dto.TransactionResponse{
+			ID:           tx.ID,
+			Amount:       tx.Amount,
+			Description:  tx.Description,
+			Date:         tx.Date,
+			CategoryID:   tx.CategoryID,
+			CategoryName: tx.CategoryName,
+			Type:         string(tx.Type),
+		})
+	}
+
+	c.JSON(http.StatusOK, gin.H{"transactions": response})
 }
